[package]
name = "starknet-lb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", default-features = false }
arc-swap = { version = "1.7.1", default-features = false }
axum = { version = "0.7.9", default-features = false, features = ["tokio", "http1", "http2"] }
clap = { version = "4.5.23", default-features = false, features = ["derive", "env", "std"] }
futures-util = { version = "0.3.31", default-features = false }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
starknet = "0.12.0"
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.13", default-features = false }
url = { version = "2.5.4", default-features = false }
